--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,20 +1,38 @@
-<!doctype html><html><head><base href="/"><meta charset="utf-8"><title>Angharad</title><link href="favicon.ico" rel="icon" type="image/x-icon"><meta name="description" content="Angharad Home Automation Manager"><meta name="viewport" content="width=device-width"><link rel="stylesheet" href="styles/vendor-89b8ce3f2a.css"><link rel="stylesheet" href="styles/app-7d2e470a70.css"></head><body data-ng-controller="sagremorCtrl" data-ng-controller-as="sagremorCtrl"><!--[if lt IE 10]>
- <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
- your browser</a> to improve your experience.</p>
- <![endif]--><data-toaster-container></data-toaster-container><div role="main" class="main row"><div class="tabbable sag-tabs-left col-xs-2"><data-top-left-menu></data-top-left-menu></div><div class="tab-content col-xs-10"><div data-ui-view="" class="tab-pane active" id="tabView"></div></div><data-top-right-menu></data-top-right-menu></div><script src="scripts/vendor-f21c996411.js"></script><script src="scripts/app-95752babac.js"></script></body><script type="text/javascript">
-  // Bootstrap the application manually instead of the ng-app directive.
-  // So we can get the config.json file prior to everything else
-  // Thanks to Jaco Pretorius: https://jacopretorius.net/2016/09/loading-configuration-data-on-startup-with-angular.html
-  $(function(){
-    $.get('config.json', (response) => {
-      angular.module('sagremorApp').constant("angharadConfig", response);
-      angular.bootstrap(document, ['sagremorApp']);
-    })
-    .fail(
-    (error) => {
-      if (error.status === 404) {
-        document.write("No config.json file present");
-      }
-    });
-  });
-</script></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Angharad</title>
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <meta name="keywords" content="angharad">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex,nofollow">
+    <meta name="referrer" content="no-referrer">
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fork-awesome.min.css">
+    <link rel="stylesheet" href="css/angharad.css">
+    <link rel="stylesheet" href="css/circular-button.css">
+  </head>
+  <body>
+    <div class="container" id="root">
+      <div class="perfect-centering" role="alert">
+        <i class="fa fa-spinner fa-spin fa-fw"></i>Loading...
+      </div>
+    </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="bundle.js"></script>
+  </body>
+</html>
+<!--
+ * 
+ * Angharad
+ *
+ * Default page
+ *
+ * Copyright 2023 Nicolas Mora <mail@babelouest.io>
+ * 
+ * The front-end application is under MIT License
+ * 
+ -->
